--- a/less/main.less
+++ b/less/main.less
@@ -43,7 +43,7 @@
 }
 
 html {
-  height:100%;
+  min-height:100%;
 
 }
 
@@ -289,16 +289,16 @@ table {
 
 #startButton {
 
-  margin-top:1em;
+  margin:1em auto 0 auto;
   background-color:@color2;
   color:@color5;
   font-size:1.5em;
   font-weight:bold;
   text-align:center;
   padding:0.25em;
-  width:100%;
+  width:50%;
   cursor: pointer;
-  .border-radius(15px);
+  .border-radius(20px);
   .drop-shadow(0px, 0px, 2px, 2px, 0.15);
   .gradient(top, #555, #111);
 
@@ -325,26 +325,47 @@ footer {
   }
 }
 
+@media only screen and (min-width: 400px) {
 
-@media only screen and (min-width: 700px) {
+  body {
+
+    font-size:20px;
+  }
+}
+
+
+@media only screen and (min-width: 600px) {
+
+  body {
+
+    font-size:22px;
+  }
+}
+
+@media only screen and (min-width: 800px) {
 
   body {
 
     font-size:24px;
   }
+
 }
 
 @media only screen and (min-width: 1000px) {
 
   body {
 
-    font-size:28px;
+    font-size:26px;
   }
+
 
 }
 
 @media only screen and (min-width: 1200px) {
 
+  body {
 
+    font-size:28px;
+  }
 
 }
